--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "description": "",
   "dependencies": {
     "axios": "^1.6.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "karate": "^1.0.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
